# python-transactional-engine

./: .gitignore  INSTALL.md  LICENSE  README.md  Taskfile.yml  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: api-reference.md  architecture.md  configuration.md  developers-guide.md  project-structure.md  saga-pattern.md  tcc-pattern.md
examples/: README.md  complete_integration_example.py  configuration_example.py  demo_json_logging.py  events_and_persistence_example.py  order_saga_comprehensive.py  saga_basic.py  tcc_basic.py
fireflytx/: __init__.py  cli.py
fireflytx/callbacks/: __init__.py
fireflytx/config/: __init__.py  engine_config.py  event_config.py  java_config_generator.py  persistence_config.py
fireflytx/core/: __init__.py  saga_context.py  saga_result.py  step_inputs.py  tcc_context.py  tcc_inputs.py  tcc_result.py
fireflytx/decorators/: __init__.py  saga.py  tcc.py
fireflytx/engine/: __init__.py  saga_engine.py  tcc_engine.py
fireflytx/events/: __init__.py  event_publisher.py  saga_events.py  tcc_events.py
fireflytx/integration/: __init__.py  bridge.py  callbacks.py  jar_builder.py  tcc_callbacks.py  type_conversion.py
fireflytx/integration/java_bridge/: build.sh
fireflytx/integration/java_bridge/src/main/java/com/firefly/transactional/: BridgeApplication.java  JavaSubprocessBridge.java  PythonCallbackHandler.java  ReactiveCallbackClient.java  SagaDefinition.java  SagaExecutionContext.java  SagaExecutionResult.java
fireflytx/integration/java_bridge/src/main/java/com/firefly/transactional/events/: EventPublisherConfiguration.java  KafkaStepEventPublisher.java  KafkaTccEventPublisher.java
fireflytx/integration/java_bridge/src/main/resources/: application.properties
fireflytx/internal/: __init__.py
fireflytx/internal/engine/: __init__.py
fireflytx/logging/: __init__.py  java_log_bridge.py  json_formatter.py  log_viewer.py  manager.py
fireflytx/persistence/: __init__.py  saga_persistence.py  tcc_persistence.py
fireflytx/shell/: __init__.py  __main__.py
fireflytx/shell/commands/: __init__.py  dev_commands.py  engine_commands.py  examples.py  process_commands.py  registry.py  util_commands.py
fireflytx/shell/core/: __init__.py  context.py  session.py  shell.py
fireflytx/shell/ui/: __init__.py  banner.py  formatter.py  menu.py  prompt.py  status_bar.py
fireflytx/shell/utils/: __init__.py  help_system.py  log_viewer.py
fireflytx/utils/: __init__.py  dependency_installer.py  helpers.py  logging.py
fireflytx/visualization/: __init__.py  graph_renderer.py  saga_visualizer.py  tcc_visualizer.py
tests/: README.md  test_advanced_compensation.py  test_advanced_tcc.py  test_config.py  test_decorators.py  test_install.py  test_java_bridge.py  test_kafka_events.py  test_redis_persistence.py  test_saga_compensation.py  test_shell_examples.py  test_utils.py
tests/integration/: test_context_variables.py  test_saga_patterns.py  test_shell_examples_execution.py  test_tcc_patterns.py
